Feierabend. Jetzt aber wirklich!

--- a/aluminaald.tex
+++ b/aluminaald.tex
@@ -35,7 +35,7 @@ Wie in den vorherigen Abschnitten werden hier separate Voruntersuchungen durchge
 
 Zum Vergleich der strukturellen Eigenschaften des Bulkmateriales, wie etwa Dichte, Bindungslänge und Koordinationszahlen, wurde ein $\alpha$-\ce{Al2O3}-Kristall bei \SI{1500}{\kelvin} relaxiert und vor den abschließenden Messungen auf Raumtemperatur herunter gekühlt.
 Durch einen methodischen Fehler wurden die Systeme zur Dichtebestimmung nicht vollends herunter gekühlt, weshalb die Referenzwerte anhand der Relaxationstemperatur korrigiert wurden.
-Damit ergibt sich ein korrigierter Referenzwert zwischen \SI{3.95}{\gpcc} bei \SI{300}{\kelvin} und \SI{3.8}{\gpcc} bei \SI{1500}{\kelvin}\cite{fiquet_temperature_1999}, der im direkten Vergleich als \SI{3.85}{\gpcc} abgeschätzt wird.
+Damit ergibt sich ein korrigierter Referenzwert zwischen \SI{3.95}{\gpcc} bei \SI{300}{\kelvin} und \SI{3.8}{\gpcc} bei \SI{1500}{\kelvin}\cite{fiquet_high-temperature_1999}, der im direkten Vergleich als \SI{3.85}{\gpcc} abgeschätzt wird.
 Der dadurch entstehende Fehler ist im Vergleich zu Abweichungen um \SI{0.5}{\gpcc} gering.
 
 Für die Bestimmung der Dichte der amorphen Struktur wurde das Bulkmaterial über den Schmelzpunkt von \SI{2317}{\kelvin} auf \SI{2555}{\kelvin} erhitzt, auf dieser Temperatur relaxiert und langsam auf Raumtemperatur abgekühlt.
@@ -127,7 +127,7 @@ Damit handelt es sich zwar streng gesehen nicht mehr um eine Simulation im kanon
   \label{fig:wateraluminasurface}
 \end{figure}
 
-Das Ergebnis der Simulationen für die Liu-Parameter (Abbildungen \ref{fig:wateraluminasurface-b} und \ref{fig:wateraluminasurface-c}) zeigt die gleichmäßige Bedeckung der Oberfläche mit Hydroxylgruppen (\todo{tatsächlicher Wert!}\SI{19}{\per\square\nano\meter}) neben gelegentlich angelagerten Wassermolekülen, die keine Oberflächenreaktion eingegangen sind.
+Das Ergebnis der Simulationen für die Liu-Parameter (Abbildungen \ref{fig:wateraluminasurface-b} und \ref{fig:wateraluminasurface-c}) zeigt die gleichmäßige Bedeckung der Oberfläche mit Hydroxylgruppen (\todo{tatsächlicher Wert!}\SI{19}{\per\square\nano\meter}) neben gelegentlich adsorbierten Wassermolekülen, die keine Oberflächenreaktion eingegangen sind.
 Letztere sollten aber auf längere Sicht durch die Einflüsse der Überkoordinationsterme des ReaxFF-Potentiales entweder zerfallen oder sich von der Oberfläche lösen.
 Trotz unterschiedlicher Startbedingungen stimmt der maximale Bedeckungsgrad der Oberfläche mit Hydroxylgruppen mit experimentell bestimmten Werten von \todo{eigentlicher Wert}\todo{Ref!}\SI{19}{\per\square\nano\meter} überein.
 Zu Beginn der Simulationen wurden ausreichende Mengen von Wassermolekülen für Bedeckungsgrade von \todo{tatsächliche Werte!}\SI{20}{\per\square\nano\meter}, \SI{50}{\per\square\nano\meter} und \SI{100}{\per\square\nano\meter} präpariert, von denen die überschüssigen Moleküle im Verlauf der Simulationen stets in der Gasphase verblieben sind, wie in Abbildung \ref{fig:wateraluminasurface-b} am oberen Rand des periodischen Simulationsraumes erkennbar ist.
