--- a/literature.bib
+++ b/literature.bib
@@ -453,3 +453,74 @@
 	pages = {876--879},
 	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/GZFM25FS/Remeš et al. - 1998 - Optical determination of the mass density of amorp.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/6I393MBX/S0022309398002075.html:text/html}
 }
+
+@article{fiquet_high-temperature_1999,
+	title = {High-temperature thermal expansion of lime, periclase, corundum and spinel},
+	volume = {27},
+	issn = {0342-1791, 1432-2021},
+	url = {http://link.springer.com/article/10.1007/s002690050246},
+	doi = {10.1007/s002690050246},
+	abstract = {The high-temperature cell parameters of lime ({CaO}), periclase ({MgO}), corundum (Al2O3), and spinel ({MgAl}2O4) have been determined from 300 up to 3000 K through X-ray diffraction experiments with synchrotron radiation. The good agreement found with dilatometric results suggests that vacancy-type defects do not make a large contribution to thermal expansion for these oxides, even near the melting point, justifying the use of X-ray diffraction for determining volume properties up to very high temperatures. Thermal expansion coefficients were determined from the measured cell volumes with equations of the form α=α0 + α1 T + α2/T 2. Along with available isobaric heat capacity and compressibility data, these derived coefficients clearly show that anharmonic effects contribute little to the isochoric heat capacities (C v ) of {CaO}, {MgO}, and Al2O3, which do not depart appreciably from the 3nR Dulong and Petit limit.},
+	number = {2},
+	urldate = {2014-11-03},
+	journal = {Physics and Chemistry of Minerals},
+	author = {Fiquet, G. and Richet, P. and Montagnac, G.},
+	month = dec,
+	year = {1999},
+	keywords = {Anharmonicity, High-temperature, Key words X-ray diffraction, Oxides, Thermal expansion},
+	pages = {103--111},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/R8UFIASQ/Fiquet et al. - 1999 - High-temperature thermal expansion of lime, pericl.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/4JVSANGM/s002690050246.html:text/html}
+}
+
+@article{nose_unified_1984,
+	title = {A unified formulation of the constant temperature molecular dynamics methods},
+	volume = {81},
+	issn = {0021-9606, 1089-7690},
+	url = {http://scitation.aip.org/content/aip/journal/jcp/81/1/10.1063/1.447334},
+	doi = {10.1063/1.447334},
+	abstract = {Three recently proposed constant temperature molecular dynamics methods by: (i) Nosé (Mol. Phys., to be published); (ii) Hoover e t a l. [Phys. Rev. Lett. 4 8, 1818 (1982)], and Evans and Morriss [Chem. Phys. 7 7, 63 (1983)]; and (iii) Haile and Gupta [J. Chem. Phys. 7 9, 3067 (1983)] are examined analytically via calculating the equilibrium distribution functions and comparing them with that of the canonical ensemble. Except for effects due to momentum and angular momentumconservation, method (1) yields the rigorous canonical distribution in both momentum and coordinate space. Method (2) can be made rigorous in coordinate space, and can be derived from method (1) by imposing a specific constraint. Method (3) is not rigorous and gives a deviation of order N − 1 / 2 from the canonical distribution (N the number of particles). The results for the constant temperature–constant pressure ensemble are similar to the canonical ensemble case.},
+	number = {1},
+	urldate = {2014-11-03},
+	journal = {The Journal of Chemical Physics},
+	author = {Nosé, Shuichi},
+	month = jul,
+	year = {1984},
+	keywords = {Angular momentum, Classical ensemble theory, Conservation of momentum, Molecular dynamics, Particle distribution functions},
+	pages = {511--519},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/RCP3HWI7/Nosé - 1984 - A unified formulation of the constant temperature .pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/C5FEJBJX/1.html:text/html}
+}
+
+@article{hoover_canonical_1985,
+	title = {Canonical dynamics: Equilibrium phase-space distributions},
+	volume = {31},
+	shorttitle = {Canonical dynamics},
+	url = {http://link.aps.org/doi/10.1103/PhysRevA.31.1695},
+	doi = {10.1103/PhysRevA.31.1695},
+	abstract = {Nosé has modified Newtonian dynamics so as to reproduce both the canonical and the isothermal-isobaric probability densities in the phase space of an N-body system. He did this by scaling time (with s) and distance (with V1/D in D dimensions) through Lagrangian equations of motion. The dynamical equations describe the evolution of these two scaling variables and their two conjugate momenta ps and pv. Here we develop a slightly different set of equations, free of time scaling. We find the dynamical steady-state probability density in an extended phase space with variables x, px, V, ε̇, and ζ, where the x are reduced distances and the two variables ε̇ and ζ act as thermodynamic friction coefficients. We find that these friction coefficients have Gaussian distributions. From the distributions the extent of small-system non-Newtonian behavior can be estimated. We illustrate the dynamical equations by considering their application to the simplest possible case, a one-dimensional classical harmonic oscillator.},
+	number = {3},
+	urldate = {2014-11-03},
+	journal = {Physical Review A},
+	author = {Hoover, William G.},
+	month = mar,
+	year = {1985},
+	pages = {1695--1697},
+	file = {APS Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/4G38X6SI/PhysRevA.31.html:text/html;Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/359B5FGV/Hoover - 1985 - Canonical dynamics Equilibrium phase-space distri.pdf:application/pdf}
+}
+
+@article{berendsen_molecular_1984,
+	title = {Molecular dynamics with coupling to an external bath},
+	volume = {81},
+	issn = {0021-9606, 1089-7690},
+	url = {http://scitation.aip.org/content/aip/journal/jcp/81/8/10.1063/1.448118},
+	doi = {10.1063/1.448118},
+	abstract = {In molecular dynamics ({MD}) simulations the need often arises to maintain such parameters as temperature or pressure rather than energy and volume, or to impose gradients for studying transport properties in nonequilibrium {MD}. A method is described to realize coupling to an external bath with constant temperature or pressure with adjustable time constants for the coupling. The method is easily extendable to other variables and to gradients, and can be applied also to polyatomic molecules involving internal constraints. The influence of coupling time constants on dynamical variables is evaluated. A leap‐frog algorithm is presented for the general case involving constraints with coupling to both a constant temperature and a constant pressure bath.},
+	number = {8},
+	urldate = {2014-11-03},
+	journal = {The Journal of Chemical Physics},
+	author = {Berendsen, H. J. C. and Postma, J. P. M. and Gunsteren, W. F. van and DiNola, A. and Haak, J. R.},
+	month = oct,
+	year = {1984},
+	keywords = {Molecular dynamics, Transport properties},
+	pages = {3684--3690},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/KTMSI26J/Berendsen et al. - 1984 - Molecular dynamics with coupling to an external ba.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/WIIUC26P/1.html:text/html}
+}
