--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -31,12 +31,12 @@ Aus diesem Grund ist eine einfache Voruntersuchung der verfügbaren Parametersä
 
 Als Vorbetrachtung für die Anwendbarkeit in Abscheidungssimulationen wurden Koordinationszahlen, Bindungslängen und Dichten mit allen Parametersätzen ermittelt und mit experimentellen Daten verglichen.
 Die Ergebnisse stimmen im Allgemeinen gut mit experimentellen Werten überein (Tabelle \ref{tab:copperpreresults}), zeigt aber für cu\_ag\_ymwu.eam.alloy eine Abweichung in der Bindungslänge von \SI{3.25}{\percent}, die zu einer Dichteabweichung von \SI{10.4}{\percent} führt.
-Die meisten anderen Parametersätze unterschätzen die Bindungslänge nur leicht, mit Ausnahme der mit LAMMPS vertriebenen Parametersätze.
-Diese wurden in den weiteren Simulationen aufgrund der guten Ergebnisse und ihrer Bewährtheit zu Rate gezogen.
+Die meisten anderen Parametersätze unterschätzen die Bindungslänge nur leicht, mit Ausnahme der mit LAMMPS vertriebenen Dateien, welche ideale strukturelle Eigenschaften produzieren.
+Diese wurden in den weiteren Simulationen aufgrund der guten strukturellen Übereinstimmung sowie ihrer Bewährtheit in Kombination mit LAMMPS zu Rate gezogen.
 
 Mit den Parameterdateien wird der Schmelzpunkt stark überschätzt, mit Ausnahme von cu\_ag\_ymwu.eam.alloy, die den Schmelzpunkt um 300K unterschätzt (Abbildung \ref{fig:copperthermo}).
 Hier zeigt sich die Eigenschaft der Molekulardynamik, jeweils nur für ein enges Anwendungsgebiet passende Ergebnisse zu liefern.
-Wie Tabelle \ref{tab:copperpots} zu entnehmen ist, wurden die verfügbaren Parametersätze nicht für thermodynamische Untersuchungen angepasst und unterstützen diese somit nicht.
+Wie Tabelle \ref{tab:copperpots} zu entnehmen ist, wurden die verfügbaren Parametersätze nicht für thermodynamische Untersuchungen angepasst und unterstützen diese somit nicht offiziell, doch werden solche extremen Temperaturen in den durchgeführten Simulationen ohnehin nicht erreicht.
 
 \begin{table}
   \begin{threeparttable}
@@ -113,26 +113,25 @@ Wie Tabelle \ref{tab:copperpots} zu entnehmen ist, wurden die verfügbaren Param
     \subcaption{Häufigkeit gleichzeitiger Ereignisse}
     \label{fig:copperparsivald-d}
   \end{subfigure}
-  \caption{Vergleich der Kupfer-Potentiale in ausgewählten Parsivald-Rechnungen}
+  \caption{Vergleich der Kupfer-Potentiale in ausgewählten Parsivald-Rechnungen für \SI{200x200x24}{\angstrom} große Substrate}
   \label{fig:copperparsivald}
 \end{figure}
 
-In einer Sputtersimulation soll zunächst überprüft werden, ob Kupfer im PVD-Modus von Parsivald abgeschieden werden kann.
+In einer PVD-Simulation soll zunächst überprüft werden, ob Kupfer im PVD-Modus von Parsivald fehlerfrei abgeschieden werden kann.
 Weiterhin werden die abgeschiedenen Schichten auf Unebenheiten, Fehlstellen und Einschlüsse untersucht, um Aussagen über deren Qualität zu gewinnen.
-Als Abscheidungsparameter wurden aufgrund der Ähnlichkeit zum Gold-PVD-Prozess dessen Werte auf Kupfer-PVD angepasst.
-Unterschiede liegen in den Auftreffenergien von \SI{5.4}{\electronvolt}, die vom Thermostat vor dem eigentlichen Auftreffen der Kupfer-Atome auf der Oberfläche noch weiter abgeschwächt werden.
+Durch die Ähnlichkeiten zwischen Kupfer und Gold wurden die Prozess-Parameter der Gold-PVD für den Kupfer-Prozess adaptiert.
+Unterschiede liegen in den Auftreffenergien von \SI{5.4}{\electronvolt}, die ebenfalls oberhalb experimenteller Werte liegen und vom Thermostat vor dem eigentlichen Auftreffen der Atome auf der Oberfläche noch weiter abgeschwächt werden.
 
-Zu Beginn der einzelnen Simulation ergeben sich hohe Abbruchrate von \SI{25}{\percent}, die durch Herausschlagen einzelner Oberflächenatome bei Ankunft eines neuen Kupferatomes verursacht werden.
-Bereits nach wenigen Oberflächenereignissen nimmt die Abbruchrate ab, was auf eine Reduktion des Effektes durch thermische Relaxation und Bedeckung der Oberfläche durch temporäre Off-Lattice-Atome hinweist.
+Zu Beginn der einzelnen Simulation ergeben sich extreme Abbruchraten von \SI{25}{\percent}, die durch Herausschlagen einzelner Oberflächenatome bei Ankunft des \todo{gesputterten?}gesputterten Atomes verursacht werden.
+Bereits nach wenigen Ereignissen sinkt die Abbruchrate auf \SI{3}{\percent}, was auf eine Reduktion des Effektes durch thermische Relaxation und Bedeckung der Oberfläche mit temporären Off-Lattice-Atomen hinweist.
 Die kritische Bedeckung dafür liegt zwischen \SI{0.034}{\per\nano\meter\squared} und \SI{0.074}{\per\nano\meter\squared} und deckt sich somit mit der maximalen MD-Ereignisdichte von \SI{0.073}{\per\nano\meter\squared}.
-Das deutet darauf hin, dass perfekte Gitterkonfigurationen nicht robust gegenüber gerichteten Energieeinträgen ist, kleine Störungen des Gitters aber zur gleichmäßigeren Verteilung der eingebrachten Energien führen.
+Das deutet darauf hin, dass perfekte Gitterkonfigurationen nicht robust gegenüber gerichteten Energieeinträgen sind, kleine Störungen des Gitters aber zur gleichmäßigeren Verteilung der eingebrachten Energien auf die umliegenden Atome führen.
 
-Im weiteren Verlauf der Simulation variiert die Abbruchrate unterhalb von \SI{2}{\percent} (Abbildung \ref{fig:copperparsivald-a}).
-Sie korreliert augenscheinlich mit der RMS-Rauheit (Abbildung \ref{fig:copperparsivald-c}), die durch Unebenheiten der Oberfläche auf der Nanometer-Skala dominiert wird.
+Im weiteren Verlauf der Simulation liegt die Abbruchrate unterhalb von \SI{2}{\percent} (Abbildung \ref{fig:copperparsivald-a}), unterliegt aber weiteren Schwankungen, die mit der RMS-Rauheit korrelieren (Abbildung \ref{fig:copperparsivald-c}), welche durch Unebenheiten der Oberfläche auf der Nanometer-Skala dominiert wird.
 Mit einem nahezu konstanten RMS-Wert um \SI{1}{\angstrom} sind die gewachsenen Schichten durchgehend glatt, mit Ausnahme einzelner Simulationen.
 
-In der abgebildeten Versuchsreihe bildet das Cu\_u3.eam-System ab Schritt 70 einen \SI{2.6}{\nano\meter} breiten und \SI{3.0}{\nano\meter} tiefen \todo{Krater?}Krater aus, der schließlich zu einem \SI{1}{\nano\meter} großen \todo{void}Einschluss abgeschlossen wird (Abbildung \ref{fig:coppercrater}).
-Die Auswirkungen dieses Kraters auf die Rauheit sind klar in Abbildung \ref{fig:copperparsivald-c} als schlagartige Abnahme in Schritt 96 und in den Abbruchraten (Abbildung \ref{fig:copperparsivald-a}) als Anstieg zwischen Schritten 60 und 90 erkennbar, beeinflussen aber nicht die Wachstumsrate (Abbildung \ref{fig:copperparsivald-b}).
+Eines der untersuchten Cu\_u3.eam-Systeme bildet ab Schritt 70 einen \SI{2.6}{\nano\meter} breiten und \SI{3.0}{\nano\meter} tiefen Krater aus, der schließlich zu einem \SI{1}{\nano\meter} großen \todo{void}Einschluss abgeschlossen wird (Abbildung \ref{fig:coppercrater}).
+Die Auswirkungen dieses Kraters auf die Rauheit sind klar in Abbildung \ref{fig:copperparsivald-c} als stetige Zunahme, gefolgt von einer schlagartigen Abnahme in Schritt 96, und in den Abbruchraten (Abbildung \ref{fig:copperparsivald-a}) als Anstieg zwischen den Schritten 60 und 90 erkennbar, beeinflussen aber nicht die Wachstumsrate (Abbildung \ref{fig:copperparsivald-b}).
 Das gleiche Verhalten zeigt sich in weiteren Simulationen auch für die anderen Parametersätze und ist nicht auf Cu\_u3.eam begrenzt.
 
 \begin{figure}
@@ -179,7 +178,5 @@ Das gleiche Verhalten zeigt sich in weiteren Simulationen auch für die anderen 
 \subsubsection{Maximale Ereignisdichte}
 Ergänzend ist in Abbildung \ref{fig:copperparsivald-d} ein Histogramm der Zahl paralleler Ereignisse dargestellt.
 Die maximale Oberflächendichte der Ereignisse liegt bei der gewählten MD-Box-Größe von \SI{37x37}{\angstrom} bei \SI{0.073}{\per\nano\meter\squared}.
-Dem stehen beobachtete Werte von 12 aktiven Ereignissen gegenüber, die einer Dichte von \SI{0.03}{\per\nano\meter\squared} und somit \SI{40}{\percent} maximaler Bedeckung entsprechen.
-Aufgrund der zufälligen Positionierung der MD-Box innerhalb der KMC-Simulation und der Blocking von Ereignissen bei Überlappung der MD-Kästen scheint dieser Wert plausibel.
-Tatsächliche Werte liegen bei den untersuchten Prozessen bei der Hälfte, also bei \SI{20}{\percent} maximaler Bedeckung.
-Die Bedeckungsdichten für Systeme unterschiedlicher Größe wurden in Tabelle \ref{tab:goldscalability} für Gold-PVD aufgelistet und zeigen für kleine Systeme ähnliche Werte, können für Systeme auf der Mikrometer-Skala mangels Rechenleistung jedoch nicht erfüllt werden.
+Dem stehen beobachtete Maxima von \num{12} aktiven Ereignissen gegenüber, die einer Dichte von \SI{0.03}{\per\nano\meter\squared} und somit \SI{40}{\percent} maximaler Bedeckung entsprechen, wobei im Schnitt nur \num{5.3} Worker aktiv sind, was einer mittleren Bedeckung von \SI{18.5}{\percent} entspricht.
+Die Bedeckungsdichten für Systeme unterschiedlicher Größe wurden bereits in Tabelle \ref{tab:goldscalability} für Gold-Abscheidungen aufgelistet und zeigen ähnliche Werte für kleine Systeme, können für Substrate auf der Mikrometer-Skala mangels Rechenleistung jedoch nicht \todo{phrasing}aufrecht erhalten werden.
